feat: Wire up extension with full command implementations
- Implement all 9 commands in extension.ts with real functionality:
  - executeRequest: Execute query at cursor position
  - executeAllRequests: Execute all queries in file
  - addConnection: Full UI flow for adding connections
  - editConnection: Edit existing connections
  - deleteConnection: Delete with confirmation
  - switchConnection: Quick pick to switch active connection
  - testConnection: Test connection health
  - saveOutput: Save query results to file
  - clearOutput: Clear output panel

- Add src/execution/outputPanel.ts for managing query output display
- Add .vscodeignore for optimized extension packaging
- Add GitHub Actions workflows (CI, CodeQL, Release)

Core modules implemented:
- Connection management with SecretStorage for credentials
- Basic Auth and AWS IAM (SigV4) authentication
- Query executor with SSL/TLS support
- Parser for .osdev file format
- IntelliSense completion provider

All 136 unit tests passing.

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,7 +1,6 @@
 {
   "comments": {
-    "lineComment": "//",
-    "blockComment": ["/*", "*/"]
+    "lineComment": "#"
   },
   "brackets": [
     ["{", "}"],
@@ -19,8 +18,8 @@
   ],
   "folding": {
     "markers": {
-      "start": "^\\s*//\\s*#?region\\b",
-      "end": "^\\s*//\\s*#?endregion\\b"
+      "start": "^\\s*#\\s*region\\b",
+      "end": "^\\s*#\\s*endregion\\b"
     }
   },
   "indentationRules": {
